fix: Safari z-index fix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,6 +22,7 @@ button:active {
   width: 100%;
   max-width: 1200px;
   margin: 48px auto 0;
+  transform: translate3d(0,0,0);
 }
 
 .img-container {
